samples/_failures_safe/1761254382_cd85df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3843bdef.c: In function ‘main’:
./samples/SAFE/__tmp_3843bdef.c:161:21: error: expected ‘)’ at end of input
  161 |     if (!buffer_init
      |        ~            ^
      |                     )
./samples/SAFE/__tmp_3843bdef.c:161:5: error: expected declaration or statement at end of input
  161 |     if (!buffer_init
      |     ^~
